objects/Partner_MDF_Quarterly_Budget_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Maximum_Managed_Accounts__c</fullName>
        <label>Maximum Managed Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Quarterly_Budget_Allowance__c</fullName>
        <label>Maximum Quarterly Budget Allowance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Managed_Accounts__c</fullName>
        <label>Minimum Managed Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner MDF Quarterly Budget Setting</label>
    <pluralLabel>Partner MDF Quarterly Budget Settings</pluralLabel>
</CustomObject>